Room, Dagger, CompetableFuture